--- a/src/assets/css/panels/home.css
+++ b/src/assets/css/panels/home.css
@@ -64,7 +64,7 @@
     height: 37px;
     border-radius: 20px;
     border: none;
-    background: #00bd7a;
+    background: #bd0000;
     font: normal normal bold 20px/25px Poppins;
     color: #121212;
     margin: 15px 0;
@@ -98,7 +98,7 @@
 }
 
 .progress-bar::-webkit-progress-value {
-    background-color: #00bd7a;
+    background-color: #bd0000;
     border-radius: 10px;
 }
 
@@ -303,7 +303,7 @@
     border-radius: 10px;
     border: 2px solid #1A1A1A;
     transition: all .2s;
-    background-color: #1AC707;
+    background-color: #c70707;
 }
 
 .online.off {
